@startuml

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

title Disable/Enable User - Domain Model (US212)

hide circles
hide methods

package "Domain Layer" {
    class User {
        Email: id
        String: name
        String: phoneNumber
        Password: password
        boolean: active

        +activate()
        +deactivate()
        +isActive(): boolean
    }

    class Email {
        String: value
    }

    class Password {
        String: hashedValue
    }

    User "1" --> "1" Email
    User "1" --> "1" Password
}

package "Application Layer" {
    class FilterUsersController {
        +getUsersByFilter(filterIndex): List<User>
    }

    class CheckUserStatusController {
        +isUserActive(user): boolean
    }

    class UserStatusController {
        +changeUserStatus(user, activate): boolean
        +activateUser(user): boolean
        +deactivateUser(user): boolean
    }
}

package "Persistence Layer" {
    class UserRepository
    class AuthenticationRepository
}

FilterUsersController --> UserRepository : uses >
CheckUserStatusController --> User : reads >
UserStatusController --> User : updates >
UserStatusController --> UserRepository : saves >
UserStatusController --> AuthenticationRepository : updates >

@enduml
